[package]
name = "lasso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
dotenvy = "0.15.7"
ethers = { version = "2.0.4", features = ["ws"] }
tokio = { version = "1.28.0", features = ["rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
